[package]
name = "owm-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jiff = { version = "0.1.0", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.120"
