[package]
name = "owm-rs"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jiff = { version = "0.2.1", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.120"
